2020-10-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-eevvideo-links, code-eevvideo)
	(find-code-eevvideo, ee-code-eevvideo): new functions.

	* eev-intro.el (find-audiovideo-intro): added two new sections:
	"7. `code-psnevideo'" and "7.1. `code-eevvideo'".

2020-10-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-psnevideo-links, ee-psnevideo-links)
	(ee-psnevideo-download-if-needed, ee-psnevideo-download)
	(ee-psnevideo-download0): new functions.

	* eev-audiovideo.el (ee-time-to-youtube-time): new function.

2020-10-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el: Rewrote most of the file to use the cleaner
	`code-*backend*' functions instead of the older
	`code-xxxpdf*-family' functions, that were much harder to
	understand. Also rewrote lots of comments.

	* eev-pdflike.el (ee-fname-page-to-url): new function.
	(ee-find-googlechrome-page): new function.

2020-10-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (code-pdfbackend, find-code-pdfbackend)
	(ee-code-pdfbackend, code-pdftextbackend)
	(find-code-pdftextbackend, ee-code-pdftextbackend): new functions.

2020-10-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-git-intro): new function.

	* eev-tlinks.el (find-texlive-links): new function.
	(find-pdflikedef-links): deleted.
	(find-find-links-links): marked (informally) as obsolete.
	(find-find-links-links-old): new alias.
	(find-psne-links): use "wget -nc" by default.

	* eev-brxxx.el: rewrote the comments in the beginning of the file.

2020-10-12  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-pdflike-page-links): rewrote using
	`find-find-links-links-new'.

2020-10-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-testblocks.el (ee-insert-test-tuareg-mode): new function.
	(ee-insert-test-idris-mode): deleted.

	* eev-elinks.el (ee-package-dir): new function.
	(ee-package-desc): new function.
	(ee-package-findelpafiles): new function.