@@ -19,7 +19,7 @@
 ;;
 ;; Author:     Eduardo Ochs <eduardoochs@gmail.com>
 ;; Maintainer: Eduardo Ochs <eduardoochs@gmail.com>
-;; Version:    2020oct17
+;; Version:    2020oct27
 ;; Keywords:   e-scripts
 ;;
 ;; Latest version: <http://angg.twu.net/eev-current/eev-audiovideo.el>
@@ -364,7 +364,8 @@ See: (find-audiovideo-intro \"`eev-avadj-mode'\")"
 (defun ee-find-mpv-video (fname &optional pos &rest rest)
   `("mpv"
     ,fname
-    ,@(if pos `("--start" ,(ee-secs-to-mm:ss pos)))
+    ;; ,@(if pos `("--start" ,(ee-secs-to-mm:ss pos)))
+    ,@(if pos (list (format "--start=%s" (ee-secs-to-mm:ss pos))))
     ,@ee-mpv-video-options
     ))
 
